--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -112,7 +112,7 @@
     dark:bg-slate-600
     pt-2
     mb-10
-    content-before
+    /* content-before */
     content-after;
 
     &:before {
@@ -142,8 +142,8 @@
         bg-slate-200
         dark:bg-slate-400
         rounded-full
-        w-24
-        h-24
+        w-28
+        h-28
         mx-auto
         overflow-hidden
         content-before;
@@ -180,10 +180,10 @@
           capitalize
           content-after;
 
-          &:after{
+          &:after {
             @apply block
             w-1/12
-            h-1
+            h-1;
           }
         }
 
@@ -200,9 +200,10 @@
 
           a {
             @apply font-bold
-            p-2
+            px-5
+            py-4
             border-2
-            rounded-md
+            rounded-sm
             border-slate-400
             bg-slate-200
             dark:border-slate-500
