--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -220,7 +220,7 @@
       text-balance
       text-center
       mx-auto
-      max-w-screen-sm
+      max-w-screen-md
       py-2
       mb-7
       md:mb-14
