--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -6,6 +6,7 @@
   :root {
     @apply bg-slate-200 dark:bg-slate-600;
   }
+
   body {
     @apply text-base/snug
     overflow-x-hidden
@@ -19,6 +20,10 @@
 
     ::after {
       @apply h-2 bg-slate-300 dark:bg-slate-400;
+    }
+
+    ::selection {
+      @apply bg-pink-300 text-pink-50;
     }
   }
 
