--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,8 +15,8 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
 span.swiper-pagination-bullet {
   width: 20px;
   height: 20px;
-  border-radius: 0;
+  border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.2);
-  border: solid thin rgba(0, 0, 0, 0.8);
+  border: solid thin rgba(0, 0, 0, 0.2);
   opacity: 1;
 }
