--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -74,13 +74,15 @@
     @apply relative 
     w-11/12
     mx-auto
-    mb-5
-    md:w-8/12
-    lg:w-7/12;
+    mb-5;
 
     article {
       @apply relative
       w-full
+      md:w-8/12
+      lg:w-7/12
+      xl:w-6/12
+      mx-auto
       flex
       justify-center
       items-center
@@ -95,19 +97,20 @@
         dark:bg-slate-500;
 
         .content_title {
-          @apply text-2xl
+          @apply text-xl
           font-cameo
+
           dark:text-slate-300
           content-after
           mb-2;
 
           &:after {
             @apply block
-                w-1/12
-                h-1
+                w-3
+                h-3
                 mt-3
-                bg-slate-500
-                dark:bg-slate-300;
+                bg-slate-500/50
+                dark:bg-slate-300/20;
           }
         }
       }
@@ -116,8 +119,10 @@
   .banner {
     @apply bg-slate-50
     dark:bg-slate-600
-    pt-2
+    pt-5
     mb-10
+    sm:pt-7
+    md:pt-10
     content-after;
 
     &::before {
@@ -133,13 +138,12 @@
       .image {
         @apply relative
         p-1
-        border-2
+        drop-shadow
         border-slate-300/80
-        bg-slate-200
-        dark:bg-slate-400
+        dark:bg-slate-300
         rounded-full
-        w-28
-        h-28
+        w-24
+        h-24
         mx-auto
         overflow-hidden
         content-before;
@@ -166,7 +170,7 @@
         text-balance
         p-2
         mx-auto
-        max-w-screen-xl
+        max-w-screen-lg
         sm:w-11/12
         lg:w-10/12;
 
@@ -192,19 +196,19 @@
 
         .enlace {
           @apply block
-          mx-auto;
+          mx-auto
+          mt-5;
 
           a {
             @apply font-bold
-            px-5
-            py-4
-            border-2
+            p-5
+            border
             rounded-sm
-            border-slate-400
-            bg-slate-200
-            dark:border-slate-500
-            dark:bg-slate-700
-            sm:p-3;
+            border-slate-300
+            bg-slate-100
+            dark:border-slate-600
+            dark:bg-slate-700/50
+            sm:p-6;
           }
         }
 
