--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    @apply bg-slate-200 dark:bg-slate-600;
+    @apply bg-slate-300 dark:bg-slate-600;
   }
 
   body {
@@ -116,8 +116,9 @@
     }
   }
   .cta {
-    @apply text-lg/tight
-      lg:text-xl;
+    @apply font-coordinates
+    text-lg/tight
+    lg:text-xl;
 
     a {
       @apply px-6 py-4
@@ -151,9 +152,9 @@
         drop-shadow
         border-slate-300/80
         dark:bg-slate-300
-        /* rounded-full */
-        w-32
-        h-32
+        rounded-full
+        w-28
+        h-28
         mx-auto
         mb-4
         overflow-hidden
@@ -171,9 +172,9 @@
           dark:to-slate-500/30;
         }
 
-        /* img {
+        img {
           @apply rounded-full;
-        } */
+        }
       }
 
       .banner_content {
@@ -191,12 +192,6 @@
           capitalize
           mb-5
           content-after;
-
-          /* &:after {
-            @apply block
-            w-1/12
-            h-1;
-          } */
         }
 
         .inner-content {
