--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -194,7 +194,8 @@
             @apply mb-10;
 
             .image {
-              @apply w-24
+              @apply relative
+              w-24
               h-24              
               overflow-hidden
               p-1 
