--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    @apply bg-slate-200 dark:bg-slate-600;
+    @apply bg-slate-300 dark:bg-slate-600;
   }
 
   body {
@@ -388,7 +388,7 @@
       }
 
       .second {
-        @apply md:bg-slate-400
+        @apply bg-slate-200 md:bg-slate-400
         md:dark:bg-slate-500;
 
         .optional .media {
