--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -389,7 +389,7 @@
 
       .second {
         @apply bg-slate-200 md:bg-slate-400
-        md:dark:bg-slate-500;
+        dark:bg-slate-600 md:dark:bg-slate-500;
 
         .optional .media {
           @apply max-md:flex;
