--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -341,7 +341,7 @@
               &:after {
                 @apply block
                 w-9/12
-                h-2
+                h-1
                 mx-auto
                 bg-current;
               }
@@ -383,13 +383,13 @@
           @apply w-1/12
           h-1
           md:w-9/12
-          md:h-2;
+          md:h-1;
         }
       }
 
       .second {
-        @apply bg-slate-200 md:bg-slate-400
-        dark:bg-slate-600 md:dark:bg-slate-500;
+        @apply md:bg-slate-400
+         md:dark:bg-slate-500;
 
         .optional .media {
           @apply max-md:flex;
