--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -124,6 +124,7 @@
     a {
       @apply px-6 py-5
       border
+      rounded-xl
       bg-slate-300
       font-coordinates
       dark:bg-slate-600
@@ -194,6 +195,7 @@
         @apply border
         border-slate-400
         dark:border-slate-700
+        rounded-xl
         px-5
         py-4
         bg-slate-300
