--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -77,7 +77,9 @@
     h-full
     z-20
     bg-cyan400/30
-    mix-blend-screen;
+    dark:bg-[#2A3E57]/30
+    mix-blend-hard-light
+    dark:mix-blend-hard-light;
   }
   .card {
     @apply relative 
