--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,213 +4,244 @@
 
 @layer base {
   :root {
-    @apply bg-primary
-    text-primary
-    fill-primary
-    dark:bg-[#2A3E57]
-    dark:text-[#A8B2BB]
-    dark:fill-[#A8B2BB];
+    @apply bg-firstlight
+    text-firstlight
+    fill-firstlight
+    dark:bg-secondark    dark:text-firstdark    dark:fill-firstdark;
   }
 
   html {
-    @apply bg-primary
-    dark:bg-[#2A3E57];
+    @apply h-full;
   }
 
   body {
     @apply text-base/snug
+    font-coordinates
+    text-pretty
+    min-h-full
+    grid-cols-1
+    grid-rows-1
+    leading-normal
     overflow-x-hidden
-    font-houschka
-    text-balance
+    antialiased
     bg-white
-    dark:bg-[#4A647D];
+    dark:bg-secondark;
+
+    *,
+    *::before,
+    *::after {
+      @apply box-border
+      m-0
+      break-words
+      p-0;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      @apply font-semibold
+      tracking-tight
+      m-0;
+    }
+
+    :focus {
+      @apply outline
+      outline-transparent
+      -outline-offset-2;
+    }
+
+    main:focus,
+    #main:focus,
+    [tabindex='-1']:focus {
+      @apply outline-none;
+    }
+
+    br {
+      @apply mt-0;
+    }
+
+    b,
+    strong,
+    .bold {
+      @apply font-semibold;
+    }
+
+    svg:not([class]) {
+      @apply fill-current
+      h-auto
+      w-full;
+    }
 
     & a {
       @apply transition-colors duration-500;
     }
 
-    ::selection {
+    a:not([class]):visited {
+      color: purple;
+    }
+
+    /* ::selection {
       @apply bg-primary text-white;
-    }
-  }
-
-  .page {
-    @apply w-screen
-    min-h-dvh
-    overflow-x-hidden
-    flex
-    flex-col;
-
-    main {
-      @apply z-10
-      bg-white
-      dark:bg-[#4A647D];
-    }
-
-    .main_content {
-      @apply w-11/12 mx-auto;
-    }
-
-    h1 {
-      @apply text-5xl/tight;
-    }
-    h2 {
-      @apply text-3xl/tight;
-    }
-    h3 {
-      @apply text-2xl;
-    }
-
-    aside {
-      @apply relative 
-      z-30
-      pt-2
-      pb-5
-      md:pb-3
-      bg-white
-    dark:bg-[#4A647D];
-    }
-
-    #footer {
-      @apply mt-auto;
-    }
+    } */
   }
 }
 @layer components {
-  .title_tracked {
-    @apply text-sm
-      lowercase
-      tracking-[1rem]
-      text-center
-      pt-8
-      mb-5
-      ml-[1rem]        
-      lg:pt-12
-      lg:mb-10;
-  }
-  .image:before {
-    @apply content-['']
-    absolute
-    top-0
-    left-0
-    w-full
-    h-full
-    z-20
-    bg-cyan400/30
-    dark:bg-[#2A3E57]/30
-    mix-blend-hard-light
-    dark:mix-blend-hard-light;
-  }
-  .card {
-    @apply relative 
-    mx-auto;
+  .hero-inner .inner-content {
+    h2 {
+      @apply text-5xl/9
+      mt-0;
+    }
 
-    article {
-      @apply relative
-      w-full
-      md:w-10/12
-      mx-auto
+    p {
+      @apply mt-3 
+       
+      font-semibold
+      sm:text-base/8;
+    }
+  }
+
+  .cta {
+    @apply font-semibold
+    px-6
+    py-3
+    outline
+    outline-2
+    outline-firstlight
+    dark:outline-firstdark    outline-offset-1
+    bg-firstlight
+    text-white
+    dark:bg-firstdark    dark:text-secondark    hover:bg-white
+    hover:text-firstlight
+    dark:hover:bg-secondark    dark:hover:text-firstdark;
+  }
+
+  .carta_content {
+    @apply max-w-7xl
+    mx-auto 
+    pb-10;
+
+    h2 {
+      @apply px-[5%]
+        mb-5
+        text-lg;
+
+      &:after {
+        @apply content-['']
+        block 
+        h-1 
+        w-10 
+        mt-2
+        bg-current;
+      }
+    }
+
+    .icon {
+      @apply mr-2;
+    }
+
+    .platos {
+      @apply pb-10;
+    }
+
+    .bebida h2 {
+      @apply mb-5;
+    }
+  }
+
+  .carrusel .title {
+    @apply text-3xl/8
+    mb-10
+    flex
+    justify-center
+    items-center;
+
+    &:after,
+    &:before {
+      @apply content-['']
+        w-1/12
+        h-0.5
+        bg-current
+        block;
+    }
+
+    &:after {
+      @apply ml-3;
+    }
+
+    &:before {
+      @apply mr-3;
+    }
+  }
+
+  .articleHome {
+    @apply max-w-5xl
+    mx-auto
+    sm:py-20
+    sm:px-10;
+
+    .head {
+      @apply py-10
+      px-5
       flex
       justify-center
-      items-center
-      box-border      
-      px-4
-      md:px-[10%]
-      lg:px-[7%]
-       bg-white
-       dark:bg-[#4A647D];
+      items-center;
+
+      &:after,
+      &:before {
+        @apply content-['']
+        w-10/12
+        h-0.5
+        bg-current
+        block;
+      }
+
+      h1 {
+        @apply text-5xl/8
+        mx-2;
+      }
+    }
+
+    div > article.destacado {
+      @apply w-full;
 
       .content {
-        @apply w-full
-        py-5
-        px-2;
-
-        .content_title {
-          @apply text-xl
+        @apply lg:bottom-0;
+        .content-wrapper {
+          @apply font-semibold
           font-coordinates
-          font-semibold
-          capitalize;
+          dark:bg-secondark/90
+          lg:mx-auto;
 
-          &:after {
-            @apply content-['']
-            block
-            w-2
-            h-1
-            mb-3
-            bg-current;
+          .enlace .subtitle {
+            @apply font-semibold;
           }
         }
       }
     }
   }
-  .cta {
-    @apply capitalize;
-    a {
-      @apply py-4
-      px-6
-      border-4
-      font-bold;
-    }
-  }
-  .obs {
-    @apply mx-auto
-    max-w-screen-md    
-    pt-4
-    pb-4
-    px-10
-    mb-7
-    md:mb-14
-    md:max-lg:px-[15%]
-    lg:py-10;
 
-    .blockContent {
-      @apply font-coordinates
-      text-base
-      text-balance;
-
-      h2 {
-        @apply leading-tight 
-        text-base;
-      }
-
-      p {
-        @apply mb-2;
-      }
-
-      strong {
-        @apply font-bold;
-      }
-    }
+  .crosslinks-inner {
+    @apply max-w-5xl
+    mx-auto
+    sm:py-10
+    sm:px-10;
   }
 
   .single,
   .compound {
-    @apply dark:bg-[#4A647D];
+    @apply py-10;
     .first,
     .second {
       .enlace {
-        @apply leading-snug
-          text-center;
         a {
-          @apply font-bold
-          inline-block
-          py-4
-          px-6
-          border-t-4
-        border-t-primary
-          bg-white
-          text-primary
-          dark:bg-[#4A647D]
-          dark:text-[#A8B2BB]
-          hover:border-primary
-          hover:text-white
-          hover:bg-primary
-          dark:hover:bg-[#A8B2BB]/20
-          dark:border-t-[#A8B2BB];
+          @apply cta;
         }
       }
       .media {
-        @apply mb-5;
+        @apply mb-10;
         .image {
           @apply relative
           w-20
@@ -230,31 +261,13 @@
           md:w-20
           md:h-20
           rounded-full
-          overflow-hidden
-          bg-cyan100
-          dark:bg-[#A8B2BB]/50;
+          overflow-hidden;
         }
       }
     }
   }
 
   .single {
-    @apply w-11/12
-    mx-auto
-    py-5;
-
-    &:before {
-      @apply content-['']
-      block
-      mx-auto
-      mb-10
-      w-1/12
-      lg:w-8/12
-      h-1
-      bg-current
-      dark:bg-[#A8B2BB];
-    }
-
     .content_wrapper {
       @apply flex
       justify-center;
@@ -263,32 +276,18 @@
         .optional {
           @apply flex
           flex-col
-          items-center
-          lg:flex-row
-          lg:items-start;
+          items-center;
         }
 
         .content {
-          @apply max-w-screen-sm
-          text-center
-          lg:text-left
-          lg:pl-5;
+          @apply px-10
+          text-center;
 
           .inner-content {
             @apply text-balance
               font-bold
               mt-4
-              mb-10
-              sm:mb-14
-              lg:mb-5;
-          }
-
-          .enlace {
-            @apply lg:text-left;
-
-            a {
-              @apply lg:px-0;
-            }
+              mb-10;
           }
         }
       }
@@ -303,8 +302,7 @@
       .first {
         @apply md:border-b-0
         md:border-r-4
-        md:border-r-primary
-        dark:md:border-r-[#A8B2BB];
+        dark:md:border-r-current;
 
         &:after {
           @apply content-['']
@@ -315,7 +313,6 @@
           my-10
           rounded-full
           bg-current
-          dark:bg-[#A8B2BB]
           md:content-none;
         }
       }
@@ -343,7 +340,6 @@
 
             .inner-content {
               @apply text-balance
-              text-lg
               text-center
               mt-2
               mb-10
